--- a/less/vars.less
+++ b/less/vars.less
@@ -30,6 +30,7 @@
 @padding-terminal-double:   (@padding-terminal * 2);
 
 // Font sizes
+@font-gap:                  0.3em;
 @font-big:                  18px;
 @font-medium:               14px;
 @font-small:                12px;
